# protobufTest

./: CMakeLists.txt  Student.proto  main.cpp
